syntax = "proto3";

package desirelines.activities.v1;

option go_package = "github.com/andy-esch/desirelines/schemas/generated/go/activities";

// Timeseries entry for distance data
// Represents cumulative distance over time
message TimeseriesEntry {
  string date = 1;      // ISO 8601 date string (e.g., "2025-01-15")
  double value = 2;     // Distance in miles (cumulative)
}

// Distance data payload consumed by frontend
// This is the primary data contract between backend and frontend
//
// Backend Producer:
//   - Python: packages/stravapipe/src/stravapipe/application/aggregator/services/pacing_service.py
//   - Function: PacingService.calculate()
//   - Storage: activities/{year}/distances.json in Cloud Storage
//
// API Gateway:
//   - Go: packages/apigateway/handler.go
//   - Endpoint: GET /activities/{year}/distances
//
// Frontend Consumer:
//   - TypeScript: packages/web/src/api/activities.ts
//   - Function: fetchDistanceData()
//   - Type: RideBlobType (maps to this proto)
//   - Used by: DistanceChartRecharts and PacingChartRecharts
//
// Note: Pacing calculations (daily pace, goal pacing) are computed client-side
//       from the distance_traveled data. See packages/web/src/utils/goalCalculations.ts
message DistancesPayload {
  // Actual cumulative distance traveled over time
  // This is the primary data series - all other data can be derived from this
  repeated TimeseriesEntry distance_traveled = 1;

  // Legacy fields - kept for backward compatibility but may be removed in future
  // These are no longer generated by the backend (empty arrays)
  repeated TimeseriesEntry avg_distance = 2;     // Deprecated: use frontend calculations
  repeated TimeseriesEntry lower_distance = 3;   // Deprecated: use user goals instead
  repeated TimeseriesEntry upper_distance = 4;   // Deprecated: use user goals instead

  // Daily activity summaries keyed by date (ISO 8601 string)
  // Not currently used by frontend but available for future features
  map<string, DailySummary> summaries = 5;
}

// Daily summary for a specific date
// Provides raw activity metadata for a single day
message DailySummary {
  repeated string activity_ids = 1;  // Strava activity IDs for this day
  double distance_miles = 2;         // Total distance for this day (not cumulative)
  // Note: activity_count can be derived from len(activity_ids)
}

// Summary object for an entire year
// Stored separately from distances payload
//
// Storage: activities/{year}/summary_activities.json
// Endpoint: GET /activities/{year}/summary
message YearSummary {
  // Daily summaries keyed by date (ISO 8601 string, e.g., "2025-01-15")
  map<string, DailySummary> daily_summaries = 1;

  // Note: Total distance and activity count can be derived from daily_summaries
  // but may be included for convenience in future versions
}
